# simple_rag

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: ingestor.py  main.py  openai_service.py  prompts.py  types.py
